--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <div class="container__clock">
       <h1 class="container__clock--timer">08:09:33 AM</h1>
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
