finished css animation

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="container"></div>
-    <div class="container__layer1"></div>
-    <div class="container__layer2"></div>
+    <div class="container layer1"></div>
+    <div class="container layer2"></div>
     <div class="container__clock">
       <h1 class="container__clock--timer">08:09:33 AM</h1>
     </div>
